# spacetimeengine

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Curvature.py  LICENSE  LISCENSE  README.md  example.py  field_equations.py  geodesics.py  listing.py  metric.py  metrics.py  plan.graphml  plotting.py  pyproject.toml  setup.py  solutions.py  spacetime.py  spacetimes.py  tests.py  util.py
spacetimeengine/: __init__.py.save  example.py
spacetimeengine.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  top_level.txt
spacetimeengine/samples/: example.py
spacetimeengine/src/: __init__.py  solutions.py  spacetime.py
