[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spacetimeengine"
version = "0.1.11"
description = "A Python physics utility which can analyze any given metric solution to the Einstein field equations."
readme = "README.md"
authors = [
    { name = "Michael.C Ryan", email = "spacetime.engineer@gmail.com" }
]
license = { text = "BSD License" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
    "sympy"
]

[project.optional-dependencies]
testing = [
    "nose"
]

[tool.setuptools.packages.find]
where = ["."]
